Sat Nov  8 07:07:48 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* configure.in: detect stdio buffer pointers for uClibc.  a patch
	  from Brian Candler <B.Candler at pobox.com> in [ruby-core:12020].
	  [ruby-core:19713]

Sat Nov  8 06:51:42 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/dbm/dbm.c (fdbm_index): make #index warn like Hash.

	* ext/dbm/dbm.c (fdbm_key): new method.

	* ext/sdbm/init.c: ditto.

Sat Nov  8 06:20:42 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/curses/curses.c: curses encoding should obey locale.

	* ext/curses/curses.c (curses_getch): 1.9 getch should return one
	  character string for single byte string.  wchar_t support may
	  follow in the future.

Sat Nov  8 05:46:50 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/io.h (rb_io_t): added write_lock to serialize.
	  [ruby-core:19668]

	* gc.c (gc_mark_children): mark write_lock.

	* gc.c (rb_gc_call_finalizer_at_exit): Mutex also needs to be
	  deferred.

	* io.c (io_fflush, io_binwrite, fptr_finalize): serializes writing.

Sat Nov  8 05:31:25 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* safe.c (safe_setter): add warning for $SAFE=3.

Sat Nov  8 01:48:07 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (rb_thread_create_timer_thread): do not wait never
	  coming signal if failed to create tiemr thread.

	* thread_pthread.c (native_cond_timedwait): returns error code.

	* thread_pthread.c (thread_timer): typo fixed.

Sat Nov  8 01:14:16 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (thread_timer, rb_thread_create_timer_thread):
	  handshakes properly.

Fri Nov  7 22:51:49 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* inits.c (rb_call_inits): do not repeat.

Fri Nov  7 22:46:57 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (thread_timer): initializes mutex each time.

Fri Nov  7 21:23:02 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
