@@ -217,7 +217,7 @@ if defined? DBM
 
       n = 0
       ret = @dbm.each_pair {|key, val|
-        assert_not_nil(i = keys.key(key))
+        assert_not_nil(i = keys.index(key))
         assert_equal(val, values[i])
 
         n += 1
@@ -239,7 +239,7 @@ if defined? DBM
       n = 0
       ret = @dbm.each_value {|val|
         assert_not_nil(key = @dbm.key(val))
-        assert_not_nil(i = keys.key(key))
+        assert_not_nil(i = keys.index(key))
         assert_equal(val, values[i])
 
         n += 1
@@ -260,7 +260,7 @@ if defined? DBM
 
       n = 0
       ret = @dbm.each_key {|key|
-        assert_not_nil(i = keys.key(key))
+        assert_not_nil(i = keys.index(key))
         assert_equal(@dbm[key], values[i])
 
         n += 1
